Implement best month enpoint
