# codebase/service/api/neo/neo.controller.js
@@ -3,7 +3,8 @@ const NearEarthObject = require('api/neo/neo.model');
 module.exports = {
   getHazardous,
   getFastest,
-  getBestYear
+  getBestYear,
+  getBestMonth
 };
 
 function getHazardous(req, res) {
@@ -28,4 +29,11 @@ function getBestYear(req, res) {
 
   NearEarthObject.findBestYear(isHazardous)
     .then(year => res.json(year));
+}
+
+function getBestMonth(req, res) {
+  const isHazardous = !!req.swagger.params.hazardous.value;
+
+  NearEarthObject.findBestMonth(isHazardous)
+    .then(month => res.json(month));
 }
