# contract/swagger.yaml
@@ -85,6 +85,24 @@ paths:
           schema:
             $ref: '#/definitions/Year'
 
+  /neo/best-month:
+    x-swagger-router-controller: neo.controller
+    get:
+      operationId: getBestMonth
+      tags:
+        - neo
+      parameters:
+        - name: hazardous
+          in: query
+          description: Filter potentially hazardous asteroids
+          required: false
+          type: boolean
+      description: Returns a year with most asteroids
+      responses:
+        200:
+          description: neo response
+          schema:
+            $ref: '#/definitions/Month'
 
 definitions:
   Neo:
@@ -102,4 +120,12 @@ definitions:
   Year:
     properties:
       year:
-        type: string
+        type: number 
+      count:
+        type: number
+  Month:
+    properties:
+      month:
+        type: number 
+      count:
+        type: number
